crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__repeated-segment.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "geometry": "85_1024_770_1024_-1_-1_460_0_460_0",
        "type": "window"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "segment repetition inside word",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "an",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 206,
                      "start": 203
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "d-d-d-d-d-d",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 220,
                      "start": 217
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "d",
                  "type": "text"
                }
              ],
              "raw_text": "an↫d-d-d-d-d-d↫d",
              "span": {
                "end": 221,
                "start": 201
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 225,
                "start": 222
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "lion",
                  "type": "text"
                }
              ],
              "raw_text": "lion",
              "span": {
                "end": 230,
                "start": 226
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "mommy",
                  "type": "text"
                }
              ],
              "raw_text": "mommy",
              "span": {
                "end": 244,
                "start": 239
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "category": "phonologicalfragment",
                    "content": [
                      {
                        "content": {
                          "element_type": "blocked_segments",
                          "span": {
                            "end": 251,
                            "start": 248
                          }
                        },
                        "type": "ca_element"
                      },
                      {
                        "content": "w",
                        "type": "text"
                      }
                    ],
                    "raw_text": "&+≠w",
                    "span": {
                      "end": 252,
                      "start": 246
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "retracing"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "we",
                        "type": "text"
                      }
                    ],
                    "raw_text": "we",
                    "span": {
                      "end": 262,
                      "start": 260
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "retracing"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 272,
                      "start": 269
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 276,
                      "start": 273
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "↫a↫and",
              "span": {
                "end": 279,
                "start": 269
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 291,
                      "start": 288
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "w",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 293,
                      "start": 292
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 296,
                      "start": 293
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "what's",
                  "type": "text"
                }
              ],
              "raw_text": "↫w:↫what's",
              "span": {
                "end": 302,
                "start": 288
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 307,
                "start": 303
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "daddy",
                  "type": "text"
                }
              ],
              "raw_text": "daddy",
              "span": {
                "end": 313,
                "start": 308
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 325,
                      "start": 322
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "bo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 328,
                      "start": 327
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "-bo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 332,
                      "start": 331
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 335,
                      "start": 332
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "both",
                  "type": "text"
                }
              ],
              "raw_text": "↫bo:-bo:↫both",
              "scoped_annotations": [
                {
                  "type": "partialretracing"
                }
              ],
              "span": {
                "end": 339,
                "start": 322
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "bo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 347,
                      "start": 346
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "th",
                  "type": "text"
                }
              ],
              "raw_text": "bo:th",
              "span": {
                "end": 349,
                "start": 344
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 360,
                      "start": 357
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "h-h",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 366,
                      "start": 363
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "hit",
                  "type": "text"
                }
              ],
              "raw_text": "↫h-h↫hit",
              "span": {
                "end": 369,
                "start": 357
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 373,
                      "start": 370
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "som",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 377,
                      "start": 376
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 380,
                      "start": 377
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "somebod",
                  "type": "text"
                },
                {
                  "content": "y",
                  "type": "shortening"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 393,
                      "start": 390
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "body",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 400,
                      "start": 397
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "↫som:↫somebod(y)↫body↫",
              "span": {
                "end": 400,
                "start": 370
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "element_type": "blocked_segments",
                    "span": {
                      "end": 411,
                      "start": 408
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 414,
                      "start": 411
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "i",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 418,
                      "start": 415
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "≠↫i↫it",
              "span": {
                "end": 420,
                "start": 408
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "span": {
                "end": 424,
                "start": 421
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 435,
                      "start": 432
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "the-the",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "segment_repetition",
                    "span": {
                      "end": 445,
                      "start": 442
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": {
                    "element_type": "blocked_segments",
                    "span": {
                      "end": 448,
                      "start": 445
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "↫the-the↫≠then",
              "span": {
                "end": 452,
                "start": 432
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    }
  }
}
