crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__retrace-in-group.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "retrace in a group can be followed by something after group",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "ingroup",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ingroup",
                    "scoped_annotations": [
                      {
                        "type": "partialretracing"
                      }
                    ],
                    "span": {
                      "end": 192,
                      "start": 185
                    },
                    "type": "annotated_word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "after",
                  "type": "text"
                }
              ],
              "raw_text": "after",
              "span": {
                "end": 207,
                "start": 202
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    }
  }
}
